--- a/package.json
+++ b/package.json
@@ -3,11 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.4",
+    "@progress/kendo-drawing": "^1.9.2",
+    "@progress/kendo-licensing": "^1.0.1",
+    "@progress/kendo-react-animation": "^4.0.0",
+    "@progress/kendo-react-buttons": "^4.0.0",
+    "@progress/kendo-react-charts": "^4.0.0",
+    "@progress/kendo-react-data-tools": "^4.0.0",
+    "@progress/kendo-react-dateinputs": "^4.0.0",
+    "@progress/kendo-react-dialogs": "^4.0.0",
+    "@progress/kendo-react-dropdowns": "^4.0.0",
+    "@progress/kendo-react-form": "^4.0.0",
+    "@progress/kendo-react-grid": "^4.0.0",
+    "@progress/kendo-react-inputs": "^4.0.0",
+    "@progress/kendo-react-intl": "^4.0.0",
+    "@progress/kendo-react-layout": "^4.1.0",
+    "@progress/kendo-react-pdf": "^4.0.0",
+    "@progress/kendo-react-progressbars": "^4.0.0",
+    "@progress/kendo-react-ripple": "^4.0.0",
+    "@progress/kendo-react-treeview": "^4.0.0",
+    "@progress/kendo-theme-material": "^3.19.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap-4-grid": "^3.4.0",
+    "hammerjs": "^2.0.8",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
